--- a/Services/2_Services.csproj
+++ b/Services/2_Services.csproj
@@ -1,9 +1,14 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <LangVersion>8</LangVersion>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="RestSharp" Version="106.11.2" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Models\5_Models.csproj" />
