--- a/IdentityServer/appsettings.Development.json
+++ b/IdentityServer/appsettings.Development.json
@@ -37,6 +37,8 @@
             "PostLogoutUrisFrontend": [ "http://localhost:4200/" ]
         },
         "FfhictOIDC": {
+            "ClientId": "digitalexcellence",
+            "ClientSecret": "BHvuhf4k94Q8vJ64UqVu7g9Cs4uD6yKr",
             "RedirectUri": "https://localhost:5005/external/callback/fhict"
         },
         "swagger": {
