--- a/API/Properties/launchSettings.json
+++ b/API/Properties/launchSettings.json
@@ -1,27 +1,11 @@
-﻿{
+{
     "$schema": "http://json.schemastore.org/launchsettings.json",
-    "iisSettings": {
-        "windowsAuthentication": false,
-        "anonymousAuthentication": true,
-        "iisExpress": {
-            "applicationUrl": "http://localhost:54992",
-            "sslPort": 44359
-        }
-    },
     "profiles": {
-        "IIS Express": {
-            "commandName": "IISExpress",
-            "launchBrowser": true,
-            "launchUrl": "",
-            "environmentVariables": {
-                "ASPNETCORE_ENVIRONMENT": "Development"
-            }
-        },
-        "Digital_Excellence": {
+        "Dex-API": {
             "commandName": "Project",
             "launchBrowser": true,
             "launchUrl": "",
-            "applicationUrl": "https://localhost:5001;http://localhost:5000",
+            "applicationUrl": "https://localhost:5001",
             "environmentVariables": {
                 "ASPNETCORE_ENVIRONMENT": "Development"
             }
