Update appsettings so that identityserver builds locally.

--- a/IdentityServer/appsettings.Development.json
+++ b/IdentityServer/appsettings.Development.json
@@ -37,6 +37,10 @@
             "PostLogoutUrisFrontend": [ "http://localhost:4200/" ]
         },
         "FfhictOIDC": {
+            "Authority": "https://identity.fhict.nl",
+            "ClientId": "tempclient",
+            "ClientSecret": "tempsecret",
+            "Scopes": "openid profile email roles",
             "RedirectUri": "https://localhost:5005/external/callback/fhict"
         },
         "swagger": {
