--- a/Repositories.Tests/Repositories.Tests.csproj
+++ b/Repositories.Tests/Repositories.Tests.csproj
@@ -16,8 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Data\4_Data.csproj" />
-    <ProjectReference Include="..\Repositories\3_Repositories.csproj" />
+    <ProjectReference Include="..\Data\Data.csproj" />
+    <ProjectReference Include="..\Repositories\Repositories.csproj" />
   </ItemGroup>
 
 </Project>
