Fixed unittests and removed unnecessary endpoint

--- a/API/API.csproj
+++ b/API/API.csproj
@@ -38,9 +38,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Data\4_Data.csproj" />
-    <ProjectReference Include="..\Models\5_Models.csproj" />
-    <ProjectReference Include="..\Services\2_Services.csproj" />
+    <ProjectReference Include="..\Data\Data.csproj" />
+    <ProjectReference Include="..\Models\Models.csproj" />
+    <ProjectReference Include="..\Services\Services.csproj" />
   </ItemGroup>
 
 
