--- a/IdentityServer/IdentityServer.csproj
+++ b/IdentityServer/IdentityServer.csproj
@@ -18,6 +18,6 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Models\5_Models.csproj" />
+      <ProjectReference Include="..\Models\Models.csproj" />
     </ItemGroup>
 </Project>
