--- a/.editorconfig
+++ b/.editorconfig
@@ -527,3 +527,8 @@ resharper_xml_wrap_text = false
 
 # IDE1006: Naming Styles
 dotnet_diagnostic.IDE1006.severity = warning
+
+# Disable the configure await message
+dotnet_diagnostic.RCS1090.severity = none
+# Disable the remove redundant whiteline message
+dotnet_diagnostic.RCS1036.severity = none
