--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -7,7 +7,7 @@ services:
       dockerfile: Data/Dockerfile
     environment: 
       - MSSQL_SA_PASSWORD=${DB_PASSWORD}
-    image: digitalexcellence/stagingdb
+    image: digitalexcellence/database
     networks:
       mssql-network:
         ipv4_address: 172.16.238.2
@@ -25,7 +25,7 @@ services:
       - App__Frontend__ClientSecret=${FRONTEND_CLIENT_SECRET}
       - App__IdentityServer__IdentityUrl=${IDENTITY_URL}
       - SENTRY_DSN=${SENTRY_DSN}
-    image:  digitalexcellence/stagingapi
+    image:  digitalexcellence/api
     networks:
       - mssql-network
 
@@ -49,7 +49,7 @@ services:
       - App__FfhictOIDC__ClientSecret=${FFHICTOIDC_CLIENT_SECRET}
       - App__FfhictOIDC__RedirectUri=${FFHICTOIDC_REDIRECT_URI}
       - SENTRY_DSN=${SENTRY_DSN}
-    image: digitalexcellence/stagingidentity
+    image: digitalexcellence/identity
 
 networks:
   mssql-network:
