--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -14,6 +14,9 @@ jobs:
       with:
         dotnet-version: 3.1.101
 
+    - name: Tools
+      run: dotnet tool install --global dotnet-reportgenerator-globaltool
+
     - name: Build
       run: dotnet build
 
