--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -12,10 +12,7 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 3.1.101
-
-    - name: Tools
-      run: dotnet tool install --global dotnet-reportgenerator-globaltool
+        dotnet-version: 3.1.101l
 
     - name: Build
       run: dotnet build
@@ -23,13 +20,10 @@ jobs:
     - name: Test
       run: dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=OpenCover /p:Exclude=\"[xunit.*]*,[*]*.Migrations.*\"
 
-    - name: Report
-      run: ~/.dotnet/tools/reportgenerator "-reports:*Tests/coverage.opencover.xml" "-targetdir:coverage-reports"
-
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
       with:
-        file: ./coverage.xml
+        file: ./coverage/results.xml
         flags: unittests
         name: codecov-umbrella
         fail_ci_if_error: true
