Use cobertura xml type

--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -24,12 +24,12 @@ jobs:
       run: dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=OpenCover /p:Exclude=\"[xunit.*]*,[*]*.Migrations.*\"
 
     - name: Report
-      run: ~/.dotnet/tools/reportgenerator "-reports:*Tests/coverage.opencover.xml" "-targetdir:coverage-reports" -reporttypes:XMLSummary
+      run: ~/.dotnet/tools/reportgenerator "-reports:*Tests/coverage.opencover.xml" "-targetdir:coverage-reports" -reporttypes:Cobertura
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
       with:
-        file: ./coverage-reports/Summary.xml
+        file: ./coverage-reports/Cobertura.xml
         flags: unittests
         name: codecov-umbrella
         fail_ci_if_error: true
