Enable code coverage workflow for pull requests

--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -1,7 +1,7 @@
 name: Codecov
 on:
-  push:
-    branches: [ feature/unittest-pipeline ]
+  pull_request:
+    branches: [ develop ]
 
 jobs:
   run:
