Changed records in appsettings.development
Changed records in appsettings.development due tot the updated launchsettings

--- a/IdentityServer/appsettings.Development.json
+++ b/IdentityServer/appsettings.Development.json
@@ -8,12 +8,12 @@
     },
     "App": {
         "Self": {
-            "JwtAuthority": "http://localhost:5004",
+            "JwtAuthority": "https://localhost:5005",
             "DeleteTokenLifeTimeInDays": 90,
-            "IssuerUri": "http://localhost:5004"
+            "IssuerUri": "https://localhost:5005"
         },
         "Api": {
-            "DeXApiUrl": "http://localhost:5000",
+            "DeXApiUrl": "https://localhost:5001",
             "ClientId": "dex-api",
             "ClientSecret": "Q!P5kqCukQBe77cVk5dqWHqx#8FaC2fDN&bstyxrHtw%5R@3Cz*Z"
         },
