--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,9 +16,9 @@ services:
       context: .
       dockerfile: IdentityServer/Dockerfile.dev
     environment: 
-      - App__Self__IssuerUri=http://172.16.238.3:5004
-      - App__Api__DeXApiUrl=http://172.16.238.4
-      - ASPNETCORE_URLS=https://+;http://+
+      - App__Self__IssuerUri=https://172.16.238.3:5004
+      - App__Api__DeXApiUrl=https://172.16.238.4
+      - ASPNETCORE_URLS=https://+;
       - ASPNETCORE_HTTPS_PORT=5005
       - ASPNETCORE_Kestrel__Certificates__Default__Password=W64x4AD8dNj9kImdX3tayS
       - ASPNETCORE_Kestrel__Certificates__Default__Path=/app/dex-identity.pfx
@@ -37,8 +37,8 @@ services:
       - db
     environment: 
       - ConnectionStrings__DefaultConnection=Server=172.16.238.2;Database=master;User=sa;Password=Dexcelence!1;
-      - App__IdentityServer__IdentityUrl=http://172.16.238.3
-      - ASPNETCORE_URLS=https://+;http://+
+      - App__IdentityServer__IdentityUrl=https://172.16.238.3
+      - ASPNETCORE_URLS=https://+;
       - ASPNETCORE_HTTPS_PORT=5001
       - ASPNETCORE_Kestrel__Certificates__Default__Password=xI90DrNea7M6UJFNDwip6t
       - ASPNETCORE_Kestrel__Certificates__Default__Path=/app/dex-api.pfx
