--- a/IdentityServer/appsettings.json
+++ b/IdentityServer/appsettings.json
@@ -1,4 +1,7 @@
 {
+    "ConnectionStrings": {
+        "DefaultConnection": ""
+    },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
@@ -24,10 +27,10 @@
             "FhictScopes": ""
         },
         "FfhictOIDC": {
-            "Authority": "https://identity.fhict.nl", 
-            "ClientId": "", 
+            "Authority": "https://identity.fhict.nl",
+            "ClientId": "",
             "ClientSecret": "",
-            "RedirectUri": "", 
+            "RedirectUri": "",
             "Scopes": "openid profile email roles"
         },
         "Frontend": {
