--- a/IdentityServer/appsettings.Development.json
+++ b/IdentityServer/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=Dex;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
@@ -25,7 +28,7 @@
             "FhictScopes": ""
         },
         "Frontend": {
-            "RedirectUriFrontend": "http://localhost:4200/auth-callback", 
+            "RedirectUriFrontend": "http://localhost:4200/auth-callback",
             "RedirectUriPostman": "https://www.postman.com/oauth2/callback",
             "PostLogoutUriFrontend": "http://localhost:4200/",
             "ClientId": "dex-frontend",
