Fixed issue with open-id config
On our environments, most of the open-id records like: jwks_uri and issuer were https, this commit should fix this.

--- a/IdentityServer/Dockerfile
+++ b/IdentityServer/Dockerfile
@@ -6,6 +6,8 @@ COPY . ./
 
 ENV App__Self__JwtAuthority = ''
 
+ENV App__Self__PublicOrigin = ''
+
 ENV App__Api__DeXApiUrl = ''
 
 ENV App__Api__ClientId = ''
