--- a/IdentityServer/appsettings.json
+++ b/IdentityServer/appsettings.json
@@ -9,7 +9,8 @@
     "App": {
         "Self": {
             "JwtAuthority": "",
-            "DeleteTokenLifeTimeInDays": 90
+            "DeleteTokenLifeTimeInDays": 90,
+            "PublicOrigin":  ""
         },
         "Api": {
             "DeXApiUrl": "",
