Added env variable for connection string
Added the env variable for connection string and removed the duplicate Fontys config in appsettings

--- a/IdentityServer/Dockerfile
+++ b/IdentityServer/Dockerfile
@@ -4,6 +4,8 @@ WORKDIR /app
 
 COPY . ./
 
+ENV ConnectionStrings__DefaultConnection = ''
+
 ENV App__Self__JwtAuthority = ''
 
 ENV App__Self__PublicOrigin = ''
