--- a/IdentityServer/Dockerfile.dev
+++ b/IdentityServer/Dockerfile.dev
@@ -4,6 +4,8 @@ ENV DOTNET_CLI_TELEMETRY_OPTOUT 1
 
 ENV App__Self__IssuerUri = ''
 
+ENV ConnectionStrings__DefaultConnection = ''
+
 ARG BuildConfiguration=Debug
 
 WORKDIR /app
