fixed and issue where fileuploader did not upload file

--- a/API/1_API.csproj
+++ b/API/1_API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -41,11 +41,9 @@
     <ProjectReference Include="..\Data\4_Data.csproj" />
     <ProjectReference Include="..\Models\5_Models.csproj" />
     <ProjectReference Include="..\Services\2_Services.csproj" />
-  </ItemGroup>
+  </ItemGroup>        
 
-  <ItemGroup>
-    <Folder Include="FileFolder\" />
-  </ItemGroup>
+
 
 
 </Project>
