Reference service name instead of IP in docker-compose file. Let Docker IP resolver do it's magic.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     depends_on:
       - db
     environment: 
-      - ConnectionStrings__DefaultConnection=Server=172.16.238.2;Database=identity;User=sa;Password=Dexcelence!1;
+      - ConnectionStrings__DefaultConnection=Server=db;Database=identity;User=sa;Password=Dexcelence!1;
       - App__Self__IssuerUri=https://172.16.238.3:5004
       - App__Api__DeXApiUrl=https://172.16.238.4
       - ASPNETCORE_URLS=https://+;
@@ -39,7 +39,7 @@ services:
     depends_on:
       - db
     environment: 
-      - ConnectionStrings__DefaultConnection=Server=172.16.238.2;Database=master;User=sa;Password=Dexcelence!1;
+      - ConnectionStrings__DefaultConnection=Server=db;Database=master;User=sa;Password=Dexcelence!1;
       - App__IdentityServer__IdentityUrl=https://172.16.238.3
       - ASPNETCORE_URLS=https://+;
       - ASPNETCORE_HTTPS_PORT=5001
