--- a/IdentityServer/Dockerfile.dev
+++ b/IdentityServer/Dockerfile.dev
@@ -21,6 +21,7 @@ FROM mcr.microsoft.com/dotnet/core/aspnet:3.1
 WORKDIR /app
 
 COPY --from=build-env /app/IdentityServer/bin/Debug/netcoreapp3.1 .
+COPY --from=build-env /app/IdentityServer/wwwroot ./wwwroot
 COPY --from=build-env /app/dex-identity.pfx . 
 
 ENTRYPOINT ["dotnet", "6_IdentityServer.dll", "--environment=Development"]
