Add Refresh URI from the Frontend in the IdentityServer
Aside from updating the configs, I also updated the docker file and docker-compose files.

--- a/IdentityServer/Dockerfile
+++ b/IdentityServer/Dockerfile
@@ -18,6 +18,8 @@ ENV App__Api__ClientSecret = ''
 
 ENV App__Frontend__RedirectUriFrontend = ''
 
+ENV App__Frontend__RefreshUriFrontend = ''
+
 ENV App__Frontend__RedirectUriFrontendPostman = ''
 
 ENV App__Frontend__PostLogoutUrisFrontend = ''
