--- a/IdentityServer/appsettings.Development.json
+++ b/IdentityServer/appsettings.Development.json
@@ -22,6 +22,7 @@
         },
         "Frontend": {
             "RedirectUriFrontend": "http://localhost:4200/auth-callback",
+            "RefreshUriFrontend": "http://localhost:4200/silent-refresh.html",
             "RedirectUriPostman": "https://www.postman.com/oauth2/callback",
             "PostLogoutUriFrontend": "http://localhost:4200/",
             "ClientId": "dex-frontend",
