--- a/IdentityServer/appsettings.json
+++ b/IdentityServer/appsettings.json
@@ -29,6 +29,7 @@
         },
         "Frontend": {
             "RedirectUriFrontend": "",
+            "RefreshUriFrontend": "",
             "RedirectUriPostman": "",
             "PostLogoutUriFrontend": "",
             "ClientId": "",
