--- a/Data/4_Data.csproj
+++ b/Data/4_Data.csproj
@@ -6,8 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20200925083952_ChangeUserProjectsTableToUserProject.cs" />
+    <Compile Remove="Migrations\20200925083952_ChangeUserProjectsTableToUserProject.Designer.cs" />
     <Compile Remove="Migrations\20200929133538_initTable.cs" />
     <Compile Remove="Migrations\20200929133538_initTable.Designer.cs" />
+    <Compile Remove="Migrations\20200929135218_ChangedUserProjectNaming.cs" />
+    <Compile Remove="Migrations\20200929135218_ChangedUserProjectNaming.Designer.cs" />
   </ItemGroup>
 
  <ItemGroup>
