Changed end points in user controller for following users or projects
Added inversed props for linking table

--- a/Data/4_Data.csproj
+++ b/Data/4_Data.csproj
@@ -14,6 +14,8 @@
     <Compile Remove="Migrations\20200929135218_ChangedUserProjectNaming.Designer.cs" />
     <Compile Remove="Migrations\20200929144218_deleteUserFollowedProjectsTable.cs" />
     <Compile Remove="Migrations\20200929144218_deleteUserFollowedProjectsTable.Designer.cs" />
+    <Compile Remove="Migrations\20200930104624_InitUserUserTable.cs" />
+    <Compile Remove="Migrations\20200930104624_InitUserUserTable.Designer.cs" />
   </ItemGroup>
 
  <ItemGroup>
