--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -29,11 +29,11 @@ jobs:
       run:  dotnet test
         /p:CollectCoverage=true 
         /p:CoverletOutputFormat=opencover 
-        /p:Threshold=30 
+        /p:Threshold=10
         /p:ThresHoldType=line 
         /p:ThresholdStat=Total 
         /p:CoverletOutput='../TestResults/' 
-        /p:ExcludeByFile=\"**/models/**/*.cs%2c**/Microsoft.NET.Test/**/*.cs%2c**/Data/**/*.cs%2c**/Repositories.*.Tests/**/*.cs%2c**/Services.Sources.Resources/**/.cs\"
+        /p:ExcludeByFile=\"**/models/**/*.cs%2c**/Microsoft.NET.Test/**/*.cs%2c**/Data/**/*.cs%2c**/Repositories.Tests/**/*.cs%2c**/Services.Sources.Resources/**/.cs\"
 
     - name: Generate report
       run: reportgenerator 
