Renamed Repositories.Tests to 3_Repositories.Tests

--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -28,12 +28,13 @@ jobs:
       #Threshold = percetage 0-100 | ThresholdType=line/branch/method
       run:  dotnet test
         /p:CollectCoverage=true 
-        /p:CoverletOutputFormat=opencover 
-        /p:Threshold=10
+        /p:CoverletOutputFormat=opencover
+        /p:Threshold=30
         /p:ThresHoldType=line 
         /p:ThresholdStat=Total 
         /p:CoverletOutput='../TestResults/' 
-        /p:ExcludeByFile=\"**/models/**/*.cs%2c**/Microsoft.NET.Test/**/*.cs%2c**/Data/**/*.cs%2c**/Repositories.Tests/**/*.cs%2c**/Services.Sources.Resources/**/.cs\"
+        /p:ExcludeByFile=\"**/models/**/*.cs%2c**/Microsoft.NET.Test/**/*.cs%2c**/Data/**/*.cs%2c**/3_Repositories.Tests/**/*.cs%2c**/Services.Sources.Resources/**/.cs\"
+        /p:MergeWith='../TestResults/coverage.opencover.xml'
 
     - name: Generate report
       run: reportgenerator 
