--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -28,17 +28,17 @@ jobs:
       #Threshold = percetage 0-100 | ThresholdType=line/branch/method
       run:  dotnet test
         /p:CollectCoverage=true 
-        /p:CoverletOutputFormat=opencover
+        /p:CoverletOutputFormat=\"json%2ccobertura\"
         /p:Threshold=30
         /p:ThresHoldType=line 
         /p:ThresholdStat=Total 
         /p:CoverletOutput='../TestResults/' 
         /p:ExcludeByFile=\"**/models/**/*.cs%2c**/Microsoft.NET.Test/**/*.cs%2c**/Data/**/*.cs%2c**/3_Repositories.Tests/**/*.cs%2c**/Services.Sources.Resources/**/.cs\"
-        /p:MergeWith="../TestResults/coverage.opencover.xml"
+        /p:MergeWith="../TestResults/coverage.json"
 
     - name: Generate report
       run: reportgenerator 
-        "-reports:TestResults/coverage.opencover.xml" 
+        "-reports:TestResults/coverage.cobertura.xml" 
         "-targetdir:coveragereport" 
         -reporttypes:Html
 
