--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -29,12 +29,18 @@ jobs:
       run:  dotnet test
         /p:CollectCoverage=true 
         /p:CoverletOutputFormat=\"json%2ccobertura\"
-        /p:Threshold=30
+        /p:Threshold=40
         /p:ThresHoldType=line 
         /p:ThresholdStat=Total 
         /p:CoverletOutput='../TestResults/' 
-        /p:ExcludeByFile=\"**/models/**/*.cs%2c**/Microsoft.NET.Test/**/*.cs%2c**/Data/**/*.cs%2c**/3_Repositories.Tests/**/*.cs%2c**/Services.Sources.Resources/**/.cs\"
+        /p:ExcludeByFile=\"**/models/**/*.cs%2c**/Microsoft.NET.Test/**/*.cs%2c**/Data/**/*.cs%2c**/Repositories.Tests.*%2c**/Services.Sources.Resources/**/.cs\"
         /p:MergeWith="../TestResults/coverage.json"
+
+    - name: Upload code coverage to artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: codecov-report
+        path: TestResults/coverage.cobertura.xml
 
     - name: Generate report
       run: reportgenerator 
