--- a/IdentityServer/Dockerfile
+++ b/IdentityServer/Dockerfile
@@ -40,7 +40,7 @@ ENV App__FfhictOIDC__RedirectUri = ''
 
 ENV SENTRY_DSN = ''
 
-RUN dotnet tool install --tool-path ./ dotnet-certificate-tool
+RUN dotnet tool install --tool-path ./ dotnet-certificate-tool --version 2.0.1
 
 RUN dotnet publish IdentityServer/6_IdentityServer.csproj -c Release -o out
 
