--- a/.github/workflows/production-deployment.yml
+++ b/.github/workflows/production-deployment.yml
@@ -1,8 +1,8 @@
 name: Production Deployment
 
-on: 
+on:
   push:
-    branches: [ master ]
+    branches: [ hotfix/certificate ]
 
 jobs:
   build:
@@ -16,7 +16,7 @@ jobs:
         run:  docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
       - name: Push docker images to dockerhub
         run:  docker-compose -f docker-compose.deploy.yml push
-      - name: Push to server 
+      - name: Push to server
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.PRODUCTION_VPS_IP }}
