--- a/IdentityServer/Dockerfile
+++ b/IdentityServer/Dockerfile
@@ -18,6 +18,8 @@ ENV App__Api__ClientSecret = ''
 
 ENV App__Frontend__RedirectUriFrontend = ''
 
+ENV App__Frontend__RefreshUriFrontend = ''
+
 ENV App__Frontend__RedirectUriFrontendPostman = ''
 
 ENV App__Frontend__PostLogoutUrisFrontend = ''
@@ -38,7 +40,7 @@ ENV App__FfhictOIDC__RedirectUri = ''
 
 ENV SENTRY_DSN = ''
 
-RUN dotnet tool install --tool-path ./ dotnet-certificate-tool
+RUN dotnet tool install --tool-path ./ dotnet-certificate-tool --version 2.0.1
 
 RUN dotnet publish IdentityServer/6_IdentityServer.csproj -c Release -o out
 
