--- a/IdentityServer/Dockerfile.dev
+++ b/IdentityServer/Dockerfile.dev
@@ -4,6 +4,8 @@ ENV DOTNET_CLI_TELEMETRY_OPTOUT 1
 
 ENV App__Self__IssuerUri = ''
 
+ENV ConnectionStrings__DefaultConnection = ''
+
 ARG BuildConfiguration=Debug
 
 WORKDIR /app
@@ -19,6 +21,7 @@ FROM mcr.microsoft.com/dotnet/core/aspnet:3.1
 WORKDIR /app
 
 COPY --from=build-env /app/IdentityServer/bin/Debug/netcoreapp3.1 .
+COPY --from=build-env /app/IdentityServer/wwwroot ./wwwroot
 COPY --from=build-env /app/dex-identity.pfx . 
 
 ENTRYPOINT ["dotnet", "6_IdentityServer.dll", "--environment=Development"]
