Added delays to make sure the containers are running before sending requests

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -10,14 +10,18 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.101
+    
     - name: Install dependencies
       run: dotnet restore
+    
     - name: Build
       run: dotnet build --configuration Release --no-restore
+    
     - name: Test
       run: dotnet test --no-restore --verbosity normal
 
@@ -26,11 +30,19 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
     - name: Docker Compose
       run: docker-compose up --build -d
+
+    - name: Sleep for 10 seconds
+      uses: jakejarvis/wait-action@master
+      with:
+        time: '10s'
+
     - name: Setup node
       uses: actions/setup-node@v1
       with:
         node-version: '10.15.3'
+
     - name: Postman tests
-      run: npm install -g newman && newman run Postman/dex.postman_collection.json -e Postman/local.postman_environment.json --insecure --timeout-request=1800
+      run: npm install -g newman && newman run Postman/dex.postman_collection.json -e Postman/local.postman_environment.json --insecure --delay-request=200
