Run the action on PRs to master too
Co-authored-by: Brend Smits <brend_smits@hotmail.com>

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -2,7 +2,7 @@ name: Run Backend Unit & Integration Tests
 
 on:
   pull_request:
-    branches: [ develop ]
+    branches: [ develop, master ]
 
 jobs:
   unit-test:
