--- a/Data/4_Data.csproj
+++ b/Data/4_Data.csproj
@@ -5,7 +5,12 @@
     <LangVersion>8</LangVersion>
   </PropertyGroup>
 
- <ItemGroup>
+  <ItemGroup>
+    <Compile Remove="Configurations\IdentityMigrations\**" />
+    <EmbeddedResource Remove="Configurations\IdentityMigrations\**" />
+    <None Remove="Configurations\IdentityMigrations\**" />
+  </ItemGroup>
+    <ItemGroup>
     <PackageReference Include="Bogus" Version="29.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.3" />
@@ -19,10 +24,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Models\5_Models.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Configurations\IdentityMigrations\" />
   </ItemGroup>
 
 </Project>
