changed tasks to normal list

--- a/API/1_API.csproj
+++ b/API/1_API.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -39,6 +39,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Data\4_Data.csproj" />
+    <ProjectReference Include="..\JobScheduler\7_JobScheduler.csproj" />
     <ProjectReference Include="..\Models\5_Models.csproj" />
     <ProjectReference Include="..\Services\2_Services.csproj" />
   </ItemGroup>
