added call to action controller

--- a/IdentityServer/appsettings.json
+++ b/IdentityServer/appsettings.json
@@ -38,7 +38,11 @@
         "swagger": {
             "RedirectUrisSwagger": "",
             "PostLogoutUrisSwagger": ""
-        }
+        },
+        "JobScheduler": {
+            "ClientId": "",
+            "ClientSecret":  "" 
+        } 
     },
     "AllowedHosts": "*"
 }
