Update workflow file to only trigger on develop

--- a/.github/workflows/staging-deployment.yml
+++ b/.github/workflows/staging-deployment.yml
@@ -2,7 +2,7 @@ name: Staging Deployment
 
 on:
   push:
-    branches: [ bugfix/298-project-icon-not-loading ]
+    branches: [ develop ]
 
 jobs:
   build:
