Create appsettings variable for checking on login

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,4 +1,5 @@
 {
+    "UpdateInstitutionOnLogin": true, 
     "ConnectionStrings": {
         "DefaultConnection": ""
     },
@@ -12,7 +13,7 @@
             "IdentityUrl": ""
         },
         "Swagger": {
-            "ClientId":  "Swagger-UI"
+            "ClientId": "Swagger-UI"
 
         }
     },
