--- a/NotificationSystem/NotificationSystem.csproj
+++ b/NotificationSystem/NotificationSystem.csproj
@@ -7,7 +7,12 @@
 
   <ItemGroup>
     <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
+    <PackageReference Include="SendGrid" Version="9.21.2" />
     <PackageReference Include="Serilog" Version="2.10.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MessagebrokerPublisher\MessagebrokerPublisher.csproj" />
   </ItemGroup>
 
 </Project>
