--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,14 @@ version: '3.8'
 
 services:
   rabbitmq:
-    image: rabbitmq:3.8.10-beta.1-management
-    volumes:
-      - ./rabbitmq/etc/definitions.json:/etc/rabbitmq/definitions.json
-      - ./rabbitmq/data:/var/lib/rabbitmq/mnesia/rabbit@my-rabbit
-      - ./rabbitmq/logs:/var/log/rabbitmq/log
+    image: 'bitnami/rabbitmq:latest'
+    environment:
+      - RABBITMQ_USERNAME=${RABBITMQ_USERNAME}
+      - RABBITMQ_PASSWORD=${RABBITMQ_PASSWORD}
     ports: 
       - 5672:5672
       - 5671:5671
       - 15672:15672
-    user: root
     networks:
       rabbitmq-network:
   
@@ -53,7 +51,12 @@ services:
       dockerfile: NotificationSystem/Dockerfile
     depends_on:
       - rabbitmq
-    user: root
+    environment:
+      - RABBITMQ_HOST_NAME=rabbitmq
+      - RABBITMQ_USERNAME=${RABBITMQ_USERNAME}
+      - RABBITMQ_PASSWORD=${RABBITMQ_PASSWORD}
+      - SENDGRID_API_KEY=${SENDGRID_API_KEY}
+      - SENDGRID_EMAIL_FROM=${SENDGRID_EMAIL_FROM}
     stdin_open: true
     tty: true
     deploy:
@@ -75,6 +78,9 @@ services:
       - ASPNETCORE_HTTPS_PORT=5001
       - ASPNETCORE_Kestrel__Certificates__Default__Password=xI90DrNea7M6UJFNDwip6t
       - ASPNETCORE_Kestrel__Certificates__Default__Path=/app/dex-api.pfx
+      - RABBITMQ_HOST_NAME=rabbitmq
+      - RABBITMQ_USERNAME=${RABBITMQ_USERNAME}
+      - RABBITMQ_PASSWORD=${RABBITMQ_PASSWORD}
     networks:
       mssql-network:
       rabbitmq-network:
